# knowledge-distill

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.obsidian/: workspace.json
.test-tmp/distill-42901d85/07_registry/: distill.db
.test-tmp/distill-58a73cb5/07_registry/: distill.db
.test-tmp/distill-63d37ad5/07_registry/: distill.db
.test-tmp/distill-7a425756/07_registry/: distill.db
.test-tmp/distill-a64bc780/07_registry/: distill.db
.test-tmp/distill-b99cd52d/07_registry/: distill.db
.test-tmp/distill-c9e55781/07_registry/: distill.db
.test-tmp/distill-dc7c98e9/07_registry/: distill.db
data/04_compiled_wiki/: 00_INDEX.md
data/04_compiled_wiki/.obsidian/: app.json  community-plugins.json
distill/: config.py
distill/agents/: compiler.py  extractor.py  ingestor.py  linker.py  output_agent.py  parser.py  query_agent.py  verifier.py
distill/cli/: main.py
distill/db/: models.py  repository.py  schema.py
distill/llm/: client.py  prompts.py
distill/search/: embeddings.py  hybrid.py  lexical.py  metrics.py
tests/: conftest.py
tests/agents/: test_ingestor.py  test_linker.py  test_output_agent.py  test_parser.py  test_query_agent.py  test_verifier.py
tests/cli/: test_pipeline_smoke.py
tests/db/: test_repository.py  test_schema.py
tests/llm/: test_client.py
tests/search/: test_hybrid.py  test_lexical.py  test_metrics.py
